--- a/PokemonWeightCalc/style.css
+++ b/PokemonWeightCalc/style.css
@@ -2,9 +2,19 @@ html {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.top-container {
+    display: flex;
+    align-items: flex-start;
+}
+
 .input-container {
     padding: 10px; 
     width: 250px;
+    display: inline-block;
+}
+
+.item-container {
+    display: inline-block;
 }
 
 .input-bar {
@@ -27,8 +37,20 @@ html {
     height: 40px;
 }
 
+.remove-item {
+    margin: 10px;
+}
+
+.items {
+    width: 400px;
+    list-style-type: none;
+    margin-top: 0px;
+    background-color: wheat;
+}
+
 .added-item {
-    margin-top: 5px;
+    display: flex;
+    align-items: center;
 }
 
 .price {
